wallet_core/lib/error_category/error_category_derive/tests/derive_error_category/fail_on_uncategorized_field.stderr
error: enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_on_uncategorized_field.rs:5:5
  |
5 |     MyError,
  |     ^^^^^^^
