wallet_core/lib/error_category/error_category_derive/tests/derive_error_category/fail_on_uncategorized_field.rs
use error_category::ErrorCategory;

#[derive(ErrorCategory)]
enum Error {
    MyError,
}

fn main() {}
